fix: scrollbar at hiddenNTL

--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -2141,7 +2141,7 @@ a:hover {
   transition: 0.7s;
 }
 .recommendedContainer.hiddenNTL {
-  height: 21px;
+  height: 22px;
   transition: 0.7s;
 }
 .recommendedContainer .nextToLearnTitle {
