--- a/src/public/sass/components/_stackView.scss
+++ b/src/public/sass/components/_stackView.scss
@@ -63,7 +63,7 @@
   transition: 0.7s;
 
   &.hiddenNTL {
-    height: 21px;
+    height: 22px;
     transition: 0.7s;
   }
 
